# latinga

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_EN.md
.github/workflows/: release.yml
docs/en/: GUIDE.md
docs/uz/: QOLLANMA.md
web/: index.html
